# HR-Tech

./: .env.example  .gitignore  README.md  pyproject.toml
data/resumes/: ahmad_almansoor_resume.txt  sara_smith_resume.txt
src/: __init__.py  app.py  config.py  exam_generator.py  google_forms.py  gui.py  mailer.py  matcher.py  modal_app.py  parser.py  storage.py  strategy.py  vector_store.py
