[project]
name = "hr-teck"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.9",
    "fastembed>=0.8.0",
    "modal>=1.5.2",
    "openai>=2.47.0",
    "pdfplumber>=0.11.10",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "requests>=2.34.2",
    "resend>=2.34.0",
]
